# ChangeLog for app-antivirus/clamav
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-antivirus/clamav/ChangeLog,v 1.33 2005/01/25 16:08:09 ticho Exp $

*clamav-0.81_rc1 (25 Jan 2005)

  25 Jan 2005; Andrej Kacian <ticho@gentoo.org> +clamav-0.81_rc1.ebuild:
  Version bump. Closes #78796, reported by djfunk <djfunk@free.fr>.

  25 Jan 2005; Thomas Raschbacher <lordvan@gentoo.org> files/clamd.rc:
  changed init script dependency from 'need net' to 'use net'. fixes bug
  #76022, thanks to Thomas Bettler <bettlertho@sis.unibe.ch> for pointing this
  out

  19 Jan 2005; Joshua Kinard <kumba@gentoo.org> clamav-0.75.1.ebuild:
  Untested on mips, someone wasn't paying attention when they added the mips
  keyword in the first place. Removing until we get user or some other
  verification that it works.

  28 Dec 2004; Markus Rothe <corsair@gentoo.org> clamav-0.80.ebuild:
  Added ~ppc64 to KEYWORDS

  28 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  11 Dec 2004; Bryan Østergaard <kloeri@gentoo.org> clamav-0.80.ebuild:
  ~alpha keyword.

  30 Nov 2004; Guy Martin <gmsoft@gentoo.org> clamav-0.80.ebuild:
  Stable on hppa.

  15 Nov 2004; Gustavo Zacarias <gustavoz@gentoo.org> clamav-0.80.ebuild:
  Stable on sparc

  13 Nov 2004; Tom Martin <slarti@gentoo.org> clamav-0.80.ebuild:
  Stable on amd64.

*clamav-0.80_rc3 (13 Nov 2004)

  13 Nov 2004; Andrej Kacian <ticho@gentoo.org> -clamav-0.80_rc3.ebuild:
  Removed 0.80_rc3.

  13 Nov 2004; Andrej Kacian <ticho@gentoo.org> clamav-0.80.ebuild:
  Stable on x86.

  23 Oct 2004; Tom Martin <slarti@gentoo.org> clamav-0.80.ebuild:
  Marked ~amd64, see bug 68633.

  18 Oct 2004; Gustavo Zacarias <gustavoz@gentoo.org> clamav-0.80.ebuild:
  Keyworded ~sparc wrt #58960

  18 Oct 2004; Andrej Kacian <ticho@gentoo.org> clamav-0.80.ebuild:
  Added postinstall warning about config file name change.

*clamav-0.80 (17 Oct 2004)
