@@ -1,21 +1,21 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 1cdd98ee4686f7ba0c7cdcf63a742055 clamav-0.81_rc1.ebuild 1745
-MD5 15fe07104d5a0a6205a4dcbefb00c6f8 ChangeLog 9107
-MD5 bba446aebba2d99328c16e3d5eafd47f clamav-0.80.ebuild 1737
+MD5 3625ef84bc71c95d05099c58477f24f4 ChangeLog 9250
+MD5 4f620361b61c91340a4858f468d068d8 clamav-0.75.1.ebuild 1582
+MD5 ef2565a9114ed1c3403b55459133d8cd clamav-0.80.ebuild 1791
 MD5 7e32edfd72887a57b16ecd73f0f7a1a0 metadata.xml 184
-MD5 2d67a98c268e5604d86b84b8d714f3ef clamav-0.75.1.ebuild 1522
-MD5 ac8c668ec7a935f9b3ae97dc2ceb24ed files/clamd.rc 1427
-MD5 e8dcbdecd955708ddc7c79399ffa6276 files/clamd.conf 166
-MD5 f0090a77dc10ba3899900622336b8610 files/digest-clamav-0.75.1 66
-MD5 39b0eeb38a2310c5434cbccd508bf77c files/digest-clamav-0.81_rc1 67
-MD5 a42aa0e5135bd2ad22288e4150ec89e2 files/digest-clamav-0.80 64
+MD5 35c5f7f8db2f99a26304904d27db4b10 clamav-0.81_rc1.ebuild 1804
 MD5 ad7d45b1be51c06986cb42c53e733d19 files/clamav-milter.README.gentoo 1311
+MD5 e8dcbdecd955708ddc7c79399ffa6276 files/clamd.conf 166
+MD5 ac8c668ec7a935f9b3ae97dc2ceb24ed files/clamd.rc 1427
+MD5 f0090a77dc10ba3899900622336b8610 files/digest-clamav-0.75.1 66
+MD5 a42aa0e5135bd2ad22288e4150ec89e2 files/digest-clamav-0.80 64
+MD5 39b0eeb38a2310c5434cbccd508bf77c files/digest-clamav-0.81_rc1 67
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.0 (GNU/Linux)
+Version: GnuPG v1.2.6 (GNU/Linux)
 
-iD8DBQFB9m7yQlM6RnzZP+IRAmXVAJ0Ug+XikV/pbaoFBSVUm1ADuXDKMACgxVrg
-K1+SIlA/3QKVm6GeJxjkoJQ=
-=RRpf
+iD8DBQFB+AUWGSBEIeh4AEYRAgMzAKCAb+ui6g4M/JpH4Nnx2xMg+JTllwCdHIei
+uMYTcGus8fPsN1pfGK26+No=
+=i4Vs
 -----END PGP SIGNATURE-----
