@@ -1,6 +1,10 @@
 # ChangeLog for app-antivirus/clamav
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-antivirus/clamav/ChangeLog,v 1.33 2005/01/25 16:08:09 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-antivirus/clamav/ChangeLog,v 1.34 2005/01/26 21:27:40 kaiowas Exp $
+
+  26 Jan 2005; petre rodan <kaiowas@gentoo.org> clamav-0.75.1.ebuild,
+  clamav-0.80.ebuild, clamav-0.81_rc1.ebuild:
+  added selinux RDEPEND
 
 *clamav-0.81_rc1 (25 Jan 2005)
 
